Initial versin of model removal

--- a/build.gradle
+++ b/build.gradle
@@ -159,7 +159,10 @@ configure(allprojects) { project ->
 configure(subprojects) { project ->
     repositories {
         // Should be enabled only in development mode
-        if (project.hasProperty('useMavenLocal') || h2oBuild.endsWith("-SNAPSHOT")) {
+        if (project.hasProperty('useMavenLocal')
+                || h2oBuild.endsWith("-SNAPSHOT")
+                || mojoPipelineVersion.endsWith("-SNAPSHOT")
+        ) {
             mavenLocal()
         }
 
