--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,10 @@ h2oBuild=1
 # Scala version for Sparkling Water. By default, for 2.11 we use 2.11.12.
 scalaBaseVersion=2.11
 # Version of Mojo Pipeline library
-mojoPipelineVersion=2.3.0
+mojoPipelineVersion=2.3.1-SNAPSHOT
 # Defines whether to run tests with Driverless AI mojo pipelines
 # These tests require the Driverless AI license
-testMojoPipeline=false
+testMojoPipeline=true
 # Disable execution of the gradle daemon
 org.gradle.daemon=false
 # Disable generation of *.sha256 and *.sha512 files since it's incompatible with Maven Central
